<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".BuscarRutaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/miMapa"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAlias"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="111dp"
                tools:layout_editor_absoluteY="75dp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="111dp"
                tools:layout_editor_absoluteY="140dp" />

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="111dp"
                tools:layout_editor_absoluteY="201dp" />

            <TextView
                android:id="@+id/tvMoto"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="111dp"
                tools:layout_editor_absoluteY="265dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="5"
                android:rating="1.0"
                android:stepSize="1.2" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="127dp"
            android:background="@android:color/background_light"
            android:text="@string/comentario_ruta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/boton_anterior_ruta" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_siguiente_ruta" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>